[package]
name = "can-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
fastbloom = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
uuid = { version = "1.4", features = ["v4"] }
