[package]
name = "can-framework"
version = "0.1.0"
edition = "2021"
default-run = "can-framework"

[dependencies]
tokio = { version = "1", features = ["full"] }
fastbloom = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
redb = "2.1"
async-recursion = "1.1"
